data/derived/comb/progs/unify/prog4548.ml.out
Characters 158-162:
  else (append_new h seen) in 
                     ^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
